--- a/gitlab/template/nuget-deploy.gitlab-ci.yml
+++ b/gitlab/template/nuget-deploy.gitlab-ci.yml
@@ -1,4 +1,9 @@
 variables:
+  FF_USE_FASTZIP: "true"         # Active l'outil de compression rapide de GitLab
+  ARTIFACT_COMPRESSION_LEVEL: "fastest" # Réduit le temps processeur pour le zip
+  CACHE_COMPRESSION_LEVEL: "fastest"
+  DOTNET_CLI_TELEMETRY_OPTOUT: "1"
+  DOTNET_NOLOGO: "true"
   PROJECT_PATH: "."  # Chemin du projet .NET à builder
   OUTPUT_PATH: "bin/Release/*.nupkg"  # Chemin de sortie du package NuGet
   NUGET_SOURCE: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/nuget/index.json"
@@ -28,11 +33,16 @@ variables:
   stage: deploy
   tags:
     - saas-windows-medium-amd64
+  cache:
+    key: "dotnet-sdk-$DOTNET_CHANNEL"
+    paths:
+      - .dotnet/
+      - dotnet-install.ps1
   before_script:
     # Télécharger et installer la version spécifiée de .NET
-    - Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1"
+    - if (!(Test-Path "dotnet-install.ps1")) { Invoke-WebRequest -Uri "https://dot.net/v1/dotnet-install.ps1" -OutFile "dotnet-install.ps1" }
     # Corrige les variables pour windows
-    - $DOTNET_CHANNEL -split ";" | ForEach-Object { ./dotnet-install.ps1 -Channel $_ }
+    - $DOTNET_CHANNEL -split ";" | ForEach-Object { ./dotnet-install.ps1 -Channel $_ -InstallDir ".dotnet" }
     - $OUTPUT_PATH = $OUTPUT_PATH -replace '/', '\'
     - $PROJECT_PATH = $PROJECT_PATH -replace '/', '\'
     - $FULL_OUTPUT_PATH = Join-Path -Path (Join-Path -Path $PWD.Path -ChildPath $PROJECT_PATH) -ChildPath $OUTPUT_PATH
